# manifest-size

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: component.rs  main.rs  manifest.rs
