[package]
name = "manifest-size"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
get-size = { version = "0.1.4", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.62"
thousands = "0.2.0"
time = { version = "0.3.36", features = ["parsing", "serde"] }
ureq = "2.10.0"

[dev-dependencies]
assert_matches = "1.5.0"
rstest = { version = "0.21.0", default-features = false }
